# PFT

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  web-ci.yml
.husky/: pre-commit
apps/mobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/next-web/: next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
docs/: APPFLOW.md  BACKEND_STRUCTURE.md  FAQ.md  FRONTEND_GUIDLINE.md  IMPLEMENTAION_PLAN.md  IMPLEMENTATION_PLAN.md  PRD.md  QA_ACCESSIBILITY_PERFORMANCE.md  SCHEDULING_DECISION.md  THREAT_MODEL.md  TRD.md
navigation/: index.tsx  types.ts
public/: index.html
screens/: BudgetScreen.tsx  DashboardScreen.tsx  ReportsScreen.tsx  ScanScreen.tsx  SettingsScreen.tsx  TransactionsScreen.tsx
src/: App.js  App.tsx  firebase-config.js  index.css  index.js  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/components/: BudgetCard.js  BudgetCard.tsx  BudgetForm.js  BudgetForm.tsx  ChartTypeSelector.js  ChartTypeSelector.tsx  EmailVerificationGuard.js  EmailVerificationGuard.tsx  EmptyState.js  EmptyState.tsx  ErrorBoundary.js  ErrorBoundary.tsx  GoalCard.js  GoalCard.tsx  GoalForm.js  GoalForm.tsx  Layout.js  (+21 more)
(+148 files in other folders)
