[package]
name = "smartspend"
version = "1.0.0"
description = "SmartSpend — Personal Finance Tracker"
authors = []
edition = "2021"

[package.metadata.bundle]
identifier = "com.smartspend.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]

[lib]
name = "smartspend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-shell = "^2.0.0"
serde = { version = "^1.0.156", features = ["derive"] }
serde_json = "^1.0.100"
